[gd_scene load_steps=39 format=2]

[ext_resource path="res://code/game.gd" type="Script" id=1]
[ext_resource path="res://default_env.tres" type="Environment" id=2]
[ext_resource path="res://originals/exported/outside/environement.dae" type="PackedScene" id=3]
[ext_resource path="res://code/playerModel.gd" type="Script" id=4]
[ext_resource path="res://assets/player/player.tscn" type="PackedScene" id=5]
[ext_resource path="res://torch.tscn" type="PackedScene" id=6]
[ext_resource path="res://code/torch.gd" type="Script" id=7]
[ext_resource path="res://token.tscn" type="PackedScene" id=8]
[ext_resource path="res://code/token.gd" type="Script" id=9]
[ext_resource path="res://originals/exported/items/token_taken/token_taken.dae" type="PackedScene" id=10]
[ext_resource path="res://originals/exported/forest/branch/branch.dae" type="PackedScene" id=11]
[ext_resource path="res://originals/exported/items/strip/strip.dae" type="PackedScene" id=12]
[ext_resource path="res://originals/exported/mountain/silex/silex.dae" type="PackedScene" id=13]
[ext_resource path="res://originals/exported/items/clef/clef.dae" type="PackedScene" id=14]
[ext_resource path="res://code/Herse.gd" type="Script" id=15]
[ext_resource path="res://originals/exported/outside/herse/herse.dae" type="PackedScene" id=16]
[ext_resource path="res://code/porte.gd" type="Script" id=17]
[ext_resource path="res://originals/exported/house/porte/porte.dae" type="PackedScene" id=18]
[ext_resource path="res://originals/exported/house/porte/default.anim" type="Animation" id=19]
[ext_resource path="res://originals/exported/house/hallstand/hallstand.dae" type="PackedScene" id=20]
[ext_resource path="res://originals/exported/house/chair/Chair.dae" type="PackedScene" id=21]
[ext_resource path="res://originals/exported/house/table/table.dae" type="PackedScene" id=22]
[ext_resource path="res://originals/exported/house/maison/maisonblend.dae" type="PackedScene" id=23]
[ext_resource path="res://originals/exported/house/bed/bed.dae" type="PackedScene" id=24]

[sub_resource type="BoxShape" id=1]

extents = Vector3( 180.507, 2.24303, 176.833 )

[sub_resource type="BoxShape" id=2]

extents = Vector3( 13.2149, 44.0084, 50.8759 )
_sections_unfolded = [ "Resource" ]

[sub_resource type="CapsuleShape" id=3]

radius = 0.672781
height = 2.40185

[sub_resource type="BoxShape" id=4]

extents = Vector3( 1.93212, 2.62381, 1.94222 )

[sub_resource type="BoxShape" id=5]

extents = Vector3( 9.67455, 8.55278, 0.113057 )

[sub_resource type="BoxShape" id=6]

extents = Vector3( 0.0701907, 1.52444, 0.79511 )

[sub_resource type="BoxShape" id=12]

extents = Vector3( 0.992953, 2.28984, 0.926052 )

[sub_resource type="BoxShape" id=11]

extents = Vector3( 1.43466, 2.78911, 1.78504 )

[sub_resource type="BoxShape" id=14]

extents = Vector3( 4.92518, 1.94791, 2.65811 )

[sub_resource type="BoxShape" id=7]

extents = Vector3( 1.37099, 2.10582, 1.28705 )

[sub_resource type="BoxShape" id=8]

extents = Vector3( 0.835191, 5.51755, 19.2712 )

[sub_resource type="BoxShape" id=9]

extents = Vector3( 1.15351, 5.5448, 12.7206 )

[sub_resource type="BoxShape" id=10]

extents = Vector3( 0.912925, 5.59896, 5.32914 )

[sub_resource type="BoxShape" id=13]

extents = Vector3( 2.08352, 2.82546, 3.47736 )

[node name="Spatial" type="Spatial" index="0"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.417542, 0.924114, -1.07033 )
script = ExtResource( 1 )
_sections_unfolded = [ "Pause" ]

[node name="WorldEnvironment" type="WorldEnvironment" parent="." index="0"]

environment = ExtResource( 2 )

[node name="Environement" type="StaticBody" parent="." index="1"]

editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 0.791013, 0, 0, 0, 1, 0.00197601, -0.0097279, -0.00477958 )
input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 1
collision_mask = 1
friction = 1.0
bounce = 0.0
constant_linear_velocity = Vector3( 0, 0, 0 )
constant_angular_velocity = Vector3( 0, 0, 0 )

[node name="floor" parent="Environement" index="0" instance=ExtResource( 3 )]

transform = Transform( 1.045, 0, 0, 0, 1.03665, 0, 0, 0, 1.045, -0.00197601, 0.012298, 0.00477958 )
_sections_unfolded = [ "Transform" ]

[node name="floor collision" type="CollisionShape" parent="Environement" index="1"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1.02, 0, -1.85609, 0 )
shape = SubResource( 1 )
disabled = false
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape" type="CollisionShape" parent="Environement" index="2"]

transform = Transform( 1, 0, 0, 0, 1.00001, 0, 0, 0, 1, 163.557, 42.1506, -0.924503 )
shape = SubResource( 2 )
disabled = false

[node name="CollisionShape5" type="CollisionShape" parent="Environement" index="3"]

transform = Transform( 0.919325, 0, 0.393499, 0, 1.00001, 0, -0.393499, 0, 0.919325, 152.693, 42.1506, -58.8633 )
shape = SubResource( 2 )
disabled = false

[node name="CollisionShape6" type="CollisionShape" parent="Environement" index="4"]

transform = Transform( 0.732995, 0, 0.680234, 0, 1.00001, 0, -0.680234, 0, 0.732995, 116.367, 42.1506, -115.335 )
shape = SubResource( 2 )
disabled = false

[node name="CollisionShape7" type="CollisionShape" parent="Environement" index="5"]

transform = Transform( 0.40239, 0, 0.915468, 0, 1.00001, 0, -0.915468, 0, 0.40239, 64.965, 42.5325, -149.822 )
shape = SubResource( 2 )
disabled = false

[node name="CollisionShape2" type="CollisionShape" parent="Environement" index="6"]

transform = Transform( -1.62921e-07, 0, -1, 0, 1.00001, 0, 1, 0, -1.62921e-07, 0.575971, 42.6194, -164.777 )
shape = SubResource( 2 )
disabled = false
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape8" type="CollisionShape" parent="Environement" index="7"]

transform = Transform( 0.354585, 0, -0.935024, 0, 1.00001, 0, 0.935024, 0, 0.354585, -61.5994, 42.6194, -151.328 )
shape = SubResource( 2 )
disabled = false
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape9" type="CollisionShape" parent="Environement" index="8"]

transform = Transform( 0.580658, 0, -0.814148, 0, 1.00001, 0, 0.814148, 0, 0.580658, -76.0452, 44.8666, -146.82 )
shape = SubResource( 2 )
disabled = false
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape10" type="CollisionShape" parent="Environement" index="9"]

transform = Transform( 0.902149, 0, -0.431425, 0, 1.00001, 0, 0.431425, 0, 0.902149, -162.826, 44.441, -48.3177 )
shape = SubResource( 2 )
disabled = false
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape11" type="CollisionShape" parent="Environement" index="10"]

transform = Transform( 0.969926, 0, -0.243401, 0, 1.00001, 0, 0.243401, 0, 0.969926, -161.623, 44.441, -35.3216 )
shape = SubResource( 2 )
disabled = false
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape3" type="CollisionShape" parent="Environement" index="11"]

transform = Transform( -1, 0, 3.25841e-07, 0, 1.00001, 0, -3.25841e-07, 0, -1, -164.878, 42.6194, -0.134974 )
shape = SubResource( 2 )
disabled = false
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape12" type="CollisionShape" parent="Environement" index="12"]

transform = Transform( -0.950698, 0, -0.310118, 0, 1.00001, 0, 0.310118, 0, -0.950698, -154.324, 42.6194, 57.4734 )
shape = SubResource( 2 )
disabled = false
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape13" type="CollisionShape" parent="Environement" index="13"]

transform = Transform( -0.768122, 0, -0.640304, 0, 1.00001, 0, 0.640304, 0, -0.768122, -125.989, 43.067, 106.494 )
shape = SubResource( 2 )
disabled = false
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape14" type="CollisionShape" parent="Environement" index="14"]

transform = Transform( -0.548085, 0, -0.836422, 0, 1.00001, 0, 0.836422, 0, -0.548085, -91.2711, 42.7752, 136.827 )
shape = SubResource( 2 )
disabled = false
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape15" type="CollisionShape" parent="Environement" index="15"]

transform = Transform( -0.285131, 0, -0.958489, 0, 1.00001, 0, 0.958489, 0, -0.285131, -46.7965, 42.7752, 157.706 )
shape = SubResource( 2 )
disabled = false
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape4" type="CollisionShape" parent="Environement" index="16"]

transform = Transform( -1.62921e-07, 0, 1, 0, 1.00001, 0, -1, 0, -1.62921e-07, -2.72951, 43.193, 165.225 )
shape = SubResource( 2 )
disabled = false
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape16" type="CollisionShape" parent="Environement" index="17"]

transform = Transform( -0.371175, 0, 0.928563, 0, 1.00001, 0, -0.928563, 0, -0.371175, 59.8882, 43.3039, 154.227 )
shape = SubResource( 2 )
disabled = false
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape17" type="CollisionShape" parent="Environement" index="18"]

transform = Transform( -0.641051, 0, 0.767498, 0, 1.00001, 0, -0.767498, 0, -0.641051, 108.177, 42.9584, 124.285 )
shape = SubResource( 2 )
disabled = false
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape18" type="CollisionShape" parent="Environement" index="19"]

transform = Transform( -0.863786, 0, 0.503859, 0, 1.00001, 0, -0.503859, 0, -0.863786, 141.308, 42.9584, 84.0946 )
shape = SubResource( 2 )
disabled = false
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape19" type="CollisionShape" parent="Environement" index="20"]

transform = Transform( -0.963228, 0, 0.268684, 0, 1.00001, 0, -0.268684, 0, -0.963228, 158.712, 42.9584, 46.0161 )
shape = SubResource( 2 )
disabled = false
_sections_unfolded = [ "Transform" ]

[node name="player" type="RigidBody" parent="." index="2"]

editor/display_folded = true
transform = Transform( -0.549897, 0, -0.835232, 0, 1, 0, 0.835232, 0, -0.549897, -112.74, 0.511673, -94.9872 )
input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 1
collision_mask = 1
mode = 0
mass = 1.0
friction = 0.0
bounce = 0.0
gravity_scale = 1.0
custom_integrator = false
continuous_cd = true
contacts_reported = 4
contact_monitor = true
sleeping = false
can_sleep = true
axis_lock_linear_x = false
axis_lock_linear_y = false
axis_lock_linear_z = false
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
linear_velocity = Vector3( 0, 0, 0 )
linear_damp = -1.0
angular_velocity = Vector3( 0, 0, 0 )
angular_damp = -1.0
script = ExtResource( 4 )
_sections_unfolded = [ "Axis Lock", "Linear" ]

[node name="model" parent="player" index="0" instance=ExtResource( 5 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.370699, 1.52588e-05, 0.440626 )
_sections_unfolded = [ "Pause" ]

[node name="CollisionShape" type="CollisionShape" parent="player" index="1"]

transform = Transform( 1, 0, 5.30863e-14, 5.30863e-14, 1.62921e-07, -1, 0, 1, 1.62921e-07, 0.381762, 1.53985, 0.44266 )
shape = SubResource( 3 )
disabled = false
_sections_unfolded = [ "Transform" ]

[node name="Torch" parent="player" index="2" instance=ExtResource( 6 )]

transform = Transform( 1.50697, 0, 0, 0, 1.26871, 0.586819, 0, -0.679649, 1.46941, 0.620707, 1.43776, -0.153211 )
script = ExtResource( 7 )

[node name="Cooldown" type="Timer" parent="player/Torch" index="7"]

process_mode = 1
wait_time = 0.25
one_shot = false
autostart = false

[node name="token1" type="StaticBody" parent="." index="3"]

editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, -2.98023e-08, 0, 0, 1, 83.2244, -0.0296073, 21.5725 )
input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 1
collision_mask = 1
friction = 1.0
bounce = 0.0
constant_linear_velocity = Vector3( 0, 0, 0 )
constant_angular_velocity = Vector3( 0, 0, 0 )

[node name="Token" parent="token1" index="0" instance=ExtResource( 8 )]

transform = Transform( 1, 0, 0, 0, 1, 2.98023e-08, 0, 0, 1, 1.19209e-07, -5.04777e-07, 0 )
script = ExtResource( 9 )

[node name="unanimated" parent="token1" index="1" instance=ExtResource( 10 )]

_sections_unfolded = [ "Transform" ]

[node name="CollisionShape" type="CollisionShape" parent="token1" index="2"]

transform = Transform( 1, 0, 0, 0, 1, 2.98023e-08, 0, 0, 1, 1.19209e-07, -5.04777e-07, 0 )
shape = SubResource( 4 )
disabled = false

[node name="token2" type="StaticBody" parent="." index="4"]

editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, -2.98023e-08, 0, 0, 1, -64.9391, -0.0296073, 56.4437 )
input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 1
collision_mask = 1
friction = 1.0
bounce = 0.0
constant_linear_velocity = Vector3( 0, 0, 0 )
constant_angular_velocity = Vector3( 0, 0, 0 )

[node name="Token" parent="token2" index="0" instance=ExtResource( 8 )]

transform = Transform( 1, 0, 0, 0, 1, 2.98023e-08, 0, 0, 1, 1.19209e-07, -5.04777e-07, 0 )
script = ExtResource( 9 )
_sections_unfolded = [ "Transform" ]

[node name="unanimated" parent="token2" index="1" instance=ExtResource( 10 )]

_sections_unfolded = [ "Transform" ]

[node name="CollisionShape" type="CollisionShape" parent="token2" index="2"]

transform = Transform( 1, 0, 0, 0, 1, 2.98023e-08, 0, 0, 1, 1.19209e-07, -5.04777e-07, 0 )
shape = SubResource( 4 )
disabled = false

[node name="token3" type="StaticBody" parent="." index="5"]

editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, -2.98023e-08, 0, 0, 1, -22.1257, -0.0296073, -17.8308 )
input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 1
collision_mask = 1
friction = 1.0
bounce = 0.0
constant_linear_velocity = Vector3( 0, 0, 0 )
constant_angular_velocity = Vector3( 0, 0, 0 )

[node name="Token" parent="token3" index="0" instance=ExtResource( 8 )]

transform = Transform( 1, 0, 0, 0, 1, 2.98023e-08, 0, 0, 1, 1.19209e-07, -5.04777e-07, 0 )
script = ExtResource( 9 )

[node name="unanimated" parent="token3" index="1" instance=ExtResource( 10 )]

_sections_unfolded = [ "Transform" ]

[node name="CollisionShape" type="CollisionShape" parent="token3" index="2"]

transform = Transform( 1, 0, 0, 0, 1, 2.98023e-08, 0, 0, 1, 1.19209e-07, -5.04777e-07, 0 )
shape = SubResource( 4 )
disabled = false

[node name="branch" parent="." index="6" instance=ExtResource( 11 )]

transform = Transform( 1.74427, 0, 0, 0, 1.99088, 0, 0, 0, 1.89045, -10.0606, 0.0841786, -22.5235 )

[node name="strip" parent="." index="7" instance=ExtResource( 12 )]

transform = Transform( 0.288615, 0, 0, 0, 0.316314, 0, 0, 0, 0.3019, 17.1901, 1.88962, 4.82653 )

[node name="silex" parent="." index="8" instance=ExtResource( 13 )]

transform = Transform( 0.135858, 0, 0, 0, 0.125908, 0, 0, 0, 0.118296, -5.76005, 0.0336365, -23.9279 )

[node name="Key" type="Spatial" parent="." index="9" instance=ExtResource( 14 )]

transform = Transform( 0.18591, 0, 0, 0, 0.166563, 0, 0, 0, 0.16994, -8.19375, 0.146025, -4.81207 )

[node name="Herse" type="KinematicBody" parent="." index="10"]

editor/display_folded = true
transform = Transform( 1.19172, 0, 0.753323, 0, 1.64735, 0, -1.36509, 0, 0.657651, -106.164, -1.51386, -133.614 )
input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 1
collision_mask = 1
axis_lock_linear_x = false
axis_lock_linear_y = false
axis_lock_linear_z = false
axis_lock_angular_x = false
axis_lock_angular_y = false
axis_lock_angular_z = false
collision/safe_margin = 0.001
script = ExtResource( 15 )

[node name="CollisionShape" type="CollisionShape" parent="Herse" index="0"]

transform = Transform( 1, 0, 0, 0, 1, 0, -5.96046e-08, 0, 1, -20.8099, 8.51087, 0.0703583 )
shape = SubResource( 5 )
disabled = false

[node name="herse" parent="Herse" index="1" instance=ExtResource( 16 )]

transform = Transform( 1, 0, 0, 0, 1, 0, -5.96046e-08, 0, 1, -16.1208, 0, 0.0397186 )

[node name="herse2" parent="Herse" index="2" instance=ExtResource( 16 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -25.4459, 0, 0 )

[node name="herse3" parent="Herse" index="3" instance=ExtResource( 16 )]

transform = Transform( 1, 0, 0, 0, 1, 0, -5.96046e-08, 0, 1, -25.4122, 7.00914, 0.0325165 )

[node name="herse4" parent="Herse" index="4" instance=ExtResource( 16 )]

transform = Transform( 1, 0, 0, 0, 1, 0, -5.96046e-08, 0, 1, -16.0815, 7.00955, -0.0379181 )

[node name="Door" type="StaticBody" parent="." index="11"]

transform = Transform( 1.43051e-06, 0, 2.82484, 0, 1.886, 0, -2.82484, 0, 1.43051e-06, 25.3364, -0.128666, -30.1816 )
input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 1
collision_mask = 1
friction = 1.0
bounce = 0.0
constant_linear_velocity = Vector3( 0, 0, 0 )
constant_angular_velocity = Vector3( 0, 0, 0 )
script = ExtResource( 17 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape" type="CollisionShape" parent="Door" index="0"]

transform = Transform( 1, 0, 5.68434e-14, 0, 1, 0, -5.68434e-14, 0, 1, 0.0386489, 1.62446, -0.756939 )
shape = SubResource( 6 )
disabled = false

[node name="DoorModele" parent="Door" index="1" instance=ExtResource( 18 )]

transform = Transform( 1, 0, 9.67122e-07, 0, 0.947226, 0, -9.66788e-07, 0, 1.00034, -0.105144, 0.136246, 0.0408831 )
_sections_unfolded = [ "Transform" ]

[node name="AnimationPlayer2" type="AnimationPlayer" parent="Door/DoorModele" index="2"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/default = ExtResource( 19 )
blend_times = [  ]

[node name="Forêt" type="Spatial" parent="." index="12"]

transform = Transform( 1, 0, 0, 0, 0.791013, 0, 0, 0, 1, -1.65656, -0.0097279, 107.437 )

[node name="House" type="StaticBody" parent="Forêt" index="0"]

transform = Transform( 1, 0, 0, 0, 0.71485, 0, 0, 0, 1, 123.026, 0, -59.6207 )
input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 1
collision_mask = 1
friction = 1.0
bounce = 0.0
constant_linear_velocity = Vector3( 0, 0, 0 )
constant_angular_velocity = Vector3( 0, 0, 0 )
_sections_unfolded = [ "Transform" ]

[node name="Hallstand" type="StaticBody" parent="Forêt/House" index="0"]

transform = Transform( -1.12574, 0, -0.0727806, 0, 1.83927, 0, 0.0677367, 0, -1.04081, -105.026, 0.632704, -67.0918 )
input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 1
collision_mask = 1
friction = 1.0
bounce = 0.0
constant_linear_velocity = Vector3( 0, 0, 0 )
constant_angular_velocity = Vector3( 0, 0, 0 )

[node name="Body" parent="Forêt/House/Hallstand" index="0" instance=ExtResource( 20 )]

transform = Transform( 0.594756, 0, -0.00175638, 0, 0.610839, 0, -0.00176803, 0, 0.621808, 2.30557, -0.0255011, 8.21609 )

[node name="CollisionShape" type="CollisionShape" parent="Forêt/House/Hallstand" index="1"]

transform = Transform( 1, 0, 3.72529e-08, 0, 0.999995, 0, 0, 0, 0.999999, 2.30409, 2.04038, 8.20308 )
shape = SubResource( 12 )
disabled = false

[node name="Chair4" type="StaticBody" parent="Forêt/House" index="1"]

transform = Transform( -0.701843, 0, 3.01516e-07, 0, 1.0053, 0, -2.28689e-07, 0, -0.925345, -102.305, 0.456006, -62.5763 )
input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 1
collision_mask = 1
friction = 1.0
bounce = 0.0
constant_linear_velocity = Vector3( 0, 0, 0 )
constant_angular_velocity = Vector3( 0, 0, 0 )
_sections_unfolded = [ "Transform" ]

[node name="chairBody" parent="Forêt/House/Chair4" index="0" instance=ExtResource( 21 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="chairBody2" parent="Forêt/House/Chair4" index="1" instance=ExtResource( 21 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Forêt/House/Chair4" index="2"]

transform = Transform( 0.701946, 0, 0, 0, 0.626828, 0, 0, 0, 0.704275, 0.0540504, 1.72157, -0.0604982 )
shape = SubResource( 11 )
disabled = false

[node name="Chair2" type="StaticBody" parent="Forêt/House" index="2"]

transform = Transform( 0.701843, 0, 0, 0, 1.0053, 0, 0, 0, 0.925345, -93.5367, 0.63805, -57.3839 )
input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 1
collision_mask = 1
friction = 1.0
bounce = 0.0
constant_linear_velocity = Vector3( 0, 0, 0 )
constant_angular_velocity = Vector3( 0, 0, 0 )

[node name="chairBody" parent="Forêt/House/Chair2" index="0" instance=ExtResource( 21 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="chairBody2" parent="Forêt/House/Chair2" index="1" instance=ExtResource( 21 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Forêt/House/Chair2" index="2"]

transform = Transform( 0.701946, 0, 0, 0, 0.626828, 0, 0, 0, 0.704275, 0.0540504, 1.72157, -0.0604982 )
shape = SubResource( 11 )
disabled = false

[node name="Chair3" type="StaticBody" parent="Forêt/House" index="3"]

transform = Transform( -0.701843, 0, 3.01516e-07, 0, 1.0053, 0, -2.28689e-07, 0, -0.925345, -102.009, 0.568256, -57.0494 )
input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 1
collision_mask = 1
friction = 1.0
bounce = 0.0
constant_linear_velocity = Vector3( 0, 0, 0 )
constant_angular_velocity = Vector3( 0, 0, 0 )
_sections_unfolded = [ "Transform" ]

[node name="chairBody" parent="Forêt/House/Chair3" index="0" instance=ExtResource( 21 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="chairBody2" parent="Forêt/House/Chair3" index="1" instance=ExtResource( 21 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Forêt/House/Chair3" index="2"]

transform = Transform( 0.701946, 0, 0, 0, 0.626828, 0, 0, 0, 0.704275, 0.0540504, 1.72157, -0.0604982 )
shape = SubResource( 11 )
disabled = false

[node name="Chair1" type="StaticBody" parent="Forêt/House" index="4"]

transform = Transform( 0.701843, 0, 0, 0, 1.0053, 0, 0, 0, 0.925345, -93.5367, 0.63805, -62.523 )
input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 1
collision_mask = 1
friction = 1.0
bounce = 0.0
constant_linear_velocity = Vector3( 0, 0, 0 )
constant_angular_velocity = Vector3( 0, 0, 0 )

[node name="chairBody" parent="Forêt/House/Chair1" index="0" instance=ExtResource( 21 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="chairBody2" parent="Forêt/House/Chair1" index="1" instance=ExtResource( 21 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Forêt/House/Chair1" index="2"]

transform = Transform( 0.701946, 0, 0, 0, 0.626828, 0, 0, 0, 0.704275, 0.0540504, 1.72157, -0.0604982 )
shape = SubResource( 11 )
disabled = false

[node name="Table" type="StaticBody" parent="Forêt/House" index="5"]

transform = Transform( 0.999994, 0, 0.00360503, 0, 1, 0, -0.00345288, 0, 0.957788, 0, 0, 0 )
input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 1
collision_mask = 1
friction = 1.0
bounce = 0.0
constant_linear_velocity = Vector3( 0, 0, 0 )
constant_angular_velocity = Vector3( 0, 0, 0 )

[node name="TableModel" parent="Forêt/House/Table" index="0" instance=ExtResource( 22 )]

transform = Transform( -0.000367145, 0, 1.99641, 0, 1.03323, 0, -1.75241, 0, 0.000394679, -97.7427, 0.581138, -66.0457 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape" type="CollisionShape" parent="Forêt/House/Table" index="1"]

transform = Transform( -0.000311551, 0, 1.28061, 0, 1, 0, -1.19425, 0, 0.000311153, -97.7041, 2.06988, -63.3165 )
shape = SubResource( 14 )
disabled = false
_sections_unfolded = [ "Transform" ]

[node name="Table2" type="StaticBody" parent="Forêt/House" index="6"]

transform = Transform( 0.999994, 0, 0.00360503, 0, 1, 0, -0.00345288, 0, 0.957788, -6.40933, 0, 19.9112 )
input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 1
collision_mask = 1
friction = 1.0
bounce = 0.0
constant_linear_velocity = Vector3( 0, 0, 0 )
constant_angular_velocity = Vector3( 0, 0, 0 )

[node name="TableModel" parent="Forêt/House/Table2" index="0" instance=ExtResource( 22 )]

transform = Transform( -0.000669565, 0, 0.507748, 0, 0.888623, 0, -0.285865, 0, 0.0007208, -97.7427, 0.581138, -66.0457 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape" type="CollisionShape" parent="Forêt/House/Table2" index="1"]

transform = Transform( -0.000184401, 0, 0.757943, 0, 0.648826, 0, -0.706831, 0, 0.000184157, -97.7703, 2.04104, -65.5332 )
shape = SubResource( 7 )
disabled = false
_sections_unfolded = [ "Transform" ]

[node name="HouseModel" parent="Forêt/House" index="7" instance=ExtResource( 23 )]

transform = Transform( 2.07616, 0, 2.27374e-13, 0, 2.69722, 0, -1.09626e-13, 0, 3.19574, -98.1514, 0.0856586, -59.0465 )

[node name="CollisionShape" type="CollisionShape" parent="Forêt/House" index="8"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -109.927, 4.69545, -58.8682 )
shape = SubResource( 8 )
disabled = false

[node name="CollisionShape2" type="CollisionShape" parent="Forêt/House" index="9"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -86.1517, 4.69545, -58.8682 )
shape = SubResource( 8 )
disabled = false

[node name="CollisionShape3" type="CollisionShape" parent="Forêt/House" index="10"]

transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, -97.9698, 4.69545, -40.3083 )
shape = SubResource( 9 )
disabled = false
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape4" type="CollisionShape" parent="Forêt/House" index="11"]

transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, -90.6562, 4.69545, -77.2756 )
shape = SubResource( 10 )
disabled = false
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape5" type="CollisionShape" parent="Forêt/House" index="12"]

transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, -105.358, 4.69545, -77.2756 )
shape = SubResource( 10 )
disabled = false
_sections_unfolded = [ "Transform" ]

[node name="StaticBody" type="StaticBody" parent="." index="13"]

input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 1
collision_mask = 1
friction = 1.0
bounce = 0.0
constant_linear_velocity = Vector3( 0, 0, 0 )
constant_angular_velocity = Vector3( 0, 0, 0 )

[node name="bed" parent="StaticBody" index="0" instance=ExtResource( 24 )]

transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 14.08, -0.36375, 2.87097 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape" type="CollisionShape" parent="StaticBody" index="1"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 14.2124, 0, 2.71543 )
shape = SubResource( 13 )
disabled = false

[connection signal="timeout" from="player/Torch/Cooldown" to="player/Torch" method="_on_Cooldown_timeout"]


